# drf-mcp-docs

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  question.yml
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: ci.yml  docs.yml  publish.yml
docs/: architecture.md  asgi-integration.md  code-generation.md  configuration.md  contributing.md  example-project.md  getting-started.md  index.md  resources-and-tools.md  schema-adapters.md  troubleshooting.md
example/: README.md  requirements.txt
example/books/: models.py  serializers.py  views.py
example/books/migrations/: 0001_initial.py
example/example_project/: asgi.py  settings.py  urls.py
src/drf_mcp_docs/: __init__.py  apps.py  settings.py  urls.py
src/drf_mcp_docs/adapters/: __init__.py  base.py  drf.py  spectacular.py  yasg.py
src/drf_mcp_docs/management/commands/: checkmcpconfig.py  runmcpserver.py
src/drf_mcp_docs/schema/: processor.py  types.py
src/drf_mcp_docs/server/: __init__.py  instance.py  resources.py  tools.py
tests/: conftest.py  settings.py  test_adapters.py  test_check_config.py  test_concurrency.py  test_e2e.py  test_filtering.py  test_logging.py  test_management.py  test_mcp_integration.py  test_processor.py  test_resources.py  test_settings.py  test_tools.py  test_urls.py
tests/testapp/: models.py  serializers.py  urls.py  views.py
